fixed the banner overlapping issue

--- a/css/typ.css
+++ b/css/typ.css
@@ -18,6 +18,6 @@
 
 @media (max-width: 800px){
   .banner-area h2{
-    font-size: 3em;
+    font-size: 2.5em;
   }
 }
